--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         </div>    
     </div>
     <div id="quiz">
-        <h1 id="question"></h1>
-        <div id="answers">
-            <input type="radio" class="answer" id="opzione1" name="opzione" value="">
+        <!-- <h1 id="question"></h1>
+        <div id="answers"> -->
+            <!-- <input type="radio" class="answer" id="opzione1" name="opzione" value="">
             <label for="opzione1" id="primo"></label>
   
             <input type="radio" class="answer" id="opzione2" name="opzione" value="">
@@ -49,12 +49,12 @@
             <label for="opzione3" id="terzo"></label>
   
             <input type="radio" class="answer" id="opzione4" name="opzione" value="">
-            <label for="opzione4" id="quarto"></label>
-        </div>
+            <label for="opzione4" id="quarto"></label> -->
+        <!-- </div>         -->
+    </div>
         <div id="divButtonNext">
             <button onclick="nextQuestion()" id="nextQuestion">Next Question</button>
         </div>
-    </div>
     <script src="script.js"></script>
 </body>
 </html>
