--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
             <input type="radio" class="answer" id="opzione4" name="opzione" value="">
             <label for="opzione4" id="quarto"></label> -->
         <!-- </div>         -->
-         <div id="divButtonNext">
-            <button onclick="nextQuestion()" id="nextQuestion">Next Question</button>
+        <div id="divButtonNext">
+            <button id="nextQuestion">Next Question</button>
         </div>
-    </div>
-       
+    </div>       
     <script src="script.js"></script>
 </body>
 </html>
