--- a/index.html
+++ b/index.html
@@ -37,12 +37,11 @@
         </div>    
     </div>
     <div id="quiz"> 
-        <div id="divButtonNext">
-        <button id="nextQuestion">Next Question</button>
-    </div>       
+           
     </div> 
- 
-
+    <div id="divButtonNext">
+        <button id="nextQuestion" onclick="nextQuestion()">Next Question</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
