--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <div id="logo">
         <img class="logo" src="epicode_logo.png" alt="Epicode's logo"/>
+        <div id="timer">TIMER</div>
     </div>
     <div id="main">    
         <div id="title">
@@ -36,7 +37,7 @@
             <button type="button" id="proceed" onclick="startTest()">PROCEED</button>
         </div>    
     </div>
-    <div id="quiz">            
+    <div id="quiz">        
     </div> 
     <div id="divButtonNext">
         <button id="nextQuestion" onclick="nextQuestion()">Next Question</button>
