--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="logo">
         <img class="logo" src="epicode_logo.png" alt="Epicode's logo"/>
-        <div id="timer">TIMER</div>
+        <div id="timer"></div>
     </div>
     <div id="main">    
         <div id="title">
